--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-id-swiper": "^2.1.0",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "@material-ui/icons": "^3.0.2",
-    "react-id-swiper": "^2.1.0",
     "swiper": "^4.5.0"
   },
   "scripts": {
